--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
 .App {
   text-align: center;
+  font-family: "Lucida Console", "Courier New", monospace;
+  font: 1em sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+li {
+  float: right;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+li a {
+  display: block;
   color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font: 1.5em sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+b {
+  color: white;
+  float: left;
+  text-align: center;
+  padding: 14px 16px;
+
+  font: 1.7em sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+}
+
+.Footer {
+  border-top: 1px solid rgba(0, 0, 4, 0.125);
+  padding-top: 10px;
+  display: flex;
+  background-color: rgb(0, 0, 0);
+  height: 200vh;
+  width: 100%;
+}
+
+.Footer li {
+  margin-top: 0px;
+  width: 33%;
+  padding-left: 20px;
+
+  color: rgb(0, 0, 0);
+}
+
+#first {
+  margin-left: 50px;
+  background: #000;
+  height: 200vh;
+  width: 50%;
+}
+
+.fa-linkedin {
+  background: black;
+  color: whitesmoke;
+  text-decoration: none;
+  margin-left: 10px;
+  margin-top: 5px;
+  font-size: 40px;
+}
+
+.fa-instagram {
+  background: black;
+  color: whitesmoke;
+  text-decoration: none;
+  margin-left: 20px;
+  font-size: 40px;
+}
+
+.fa-twitter {
+  background: black;
+  color: whitesmoke;
+  text-decoration: none;
+  margin-left: 20px;
+  font-size: 40px;
+}
+
+.fa-medium {
+  background: black;
+  color: whitesmoke;
+  text-decoration: none;
+  margin-left: 20px;
+  font-size: 40px;
+}
+
+.fa-envelope {
+  background: black;
+  color: whitesmoke;
+  text-decoration: none;
+  margin-left: 20px;
+  font-size: 40px;
 }
