--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,10 @@
-.App {
-  text-align: center;
-  font-family: "Lucida Console", "Courier New", monospace;
-  font: 1em sans-serif;
-}
 
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #111;
 }
 
 li {
@@ -34,72 +29,20 @@ b {
   font: 1.7em sans-serif;
 }
 
-/* Change the link color to #111 (black) on hover */
 li a:hover {
-  background-color: #111;
+  background-color: rgb(77, 76, 78);
 }
 
-.Footer {
-  border-top: 1px solid rgba(0, 0, 4, 0.125);
-  padding-top: 10px;
-  display: flex;
-  background-color: rgb(0, 0, 0);
-  height: 200vh;
-  width: 100%;
-}
-
-.Footer li {
-  margin-top: 0px;
-  width: 33%;
-  padding-left: 20px;
-
-  color: rgb(0, 0, 0);
-}
-
-#first {
-  margin-left: 50px;
-  background: #000;
-  height: 200vh;
-  width: 50%;
-}
-
-.fa-linkedin {
-  background: black;
-  color: whitesmoke;
-  text-decoration: none;
-  margin-left: 10px;
-  margin-top: 5px;
-  font-size: 40px;
-}
-
-.fa-instagram {
-  background: black;
-  color: whitesmoke;
-  text-decoration: none;
-  margin-left: 20px;
-  font-size: 40px;
-}
-
-.fa-twitter {
-  background: black;
-  color: whitesmoke;
-  text-decoration: none;
-  margin-left: 20px;
-  font-size: 40px;
-}
-
-.fa-medium {
-  background: black;
-  color: whitesmoke;
-  text-decoration: none;
-  margin-left: 20px;
-  font-size: 40px;
-}
-
-.fa-envelope {
-  background: black;
-  color: whitesmoke;
-  text-decoration: none;
-  margin-left: 20px;
-  font-size: 40px;
+@media screen and (max-width: 600px) {
+  b {
+    padding-left: 20%;
+    padding-right: 20%;
+    width: 60%;
+  }
+  li {
+    float: center;
+    padding-left: 10%;
+    padding-right: 10%;
+    width: 30%;
+  }
 }
