--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -6,9 +6,11 @@
   .Footer {
     position:fixed;
     padding-top: 10px;
+    padding-left: 40px;
     display: flex;
     bottom: 0;
-    width: 100%
+    width: 100%;
+    z-index: 3;
   }
   
   .Footer li {
@@ -24,6 +26,17 @@
     width: 100%;
   }
   
+  .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
   .fa-linkedin {
     color: whitesmoke;
     text-decoration: none;
