--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,17 +2,16 @@
     background: url('./images/earth-background.jpg') center center/cover no-repeat;
     background-color: black;
     background-size: cover;
-    position: center;
-    z-index:-3;
+    position: relative;
+    z-index: -3;
     height: 100vh;
 }
 
 @media screen and (max-width: 800px) {
-
     .Home {
-        background: url('./images/EarthMobile.jpg') fixed;
+        background: url('./images/EarthMobile.jpg') center center/cover no-repeat fixed;
+        background-color: black;
+        background-size: cover;
         height: 90vh;
     }
 }
-
-
