--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -1,16 +1,15 @@
 /* Change the link color to #111 (black) on hover */
 
-  
-
 
   .Footer {
     position:fixed;
-    padding-top: 10px;
+    padding-top: 70px;
     padding-left: 40px;
     display: flex;
     bottom: 0;
     width: 100%;
     z-index: 3;
+    background: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(0, 0, 0, 1)); /* Use the background property */
   }
   
   .Footer li {
