--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -17,7 +17,7 @@
 .home-container {
     background-size: cover;
     font-family: Arial, sans-serif;
-    max-width: 75%;
+    max-width: 600px;
     margin: 0 auto;
     color: #FFF;
     height: 100vh; /* Full viewport height */
