--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -10,6 +10,8 @@
     width: 100%;
     z-index: 3;
     background: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(0, 0, 0, 1)); /* Use the background property */
+    pointer-events: none;
+
   }
   
   .Footer li {
@@ -42,6 +44,8 @@
     padding-left: 10%;
     margin-top: 5px;
     font-size: 40px;
+    pointer-events: auto;
+
   }
   
   .fa-instagram {
@@ -50,6 +54,8 @@
     text-decoration: none;
     margin-left: 20px;
     font-size: 40px;
+    pointer-events: auto;
+
   }
   
   
@@ -59,6 +65,7 @@
     text-decoration: none;
     margin-left: 20px;
     font-size: 40px;
+    pointer-events: auto;
   }
   
   .fa-github {
@@ -68,6 +75,8 @@
     margin-left: 20px;
     margin-top: 5px;
     font-size: 40px;
+    pointer-events: auto;
+
   }
   
   .fa-medium {
@@ -76,6 +85,8 @@
     text-decoration: none;
     margin-left: 20px;
     font-size: 40px;
+    pointer-events: auto;
+
   }
   
   .fa-envelope {
@@ -84,5 +95,7 @@
     text-decoration: none;
     margin-left: 20px;
     font-size: 40px;
+    pointer-events: auto;
+
   }
   
